// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`customStyles method customStyles option 1`] = `
{
  ":active": {
    "backgroundColor": "rgba(var(--theme-provider-scooter), 0.5)",
  },
  "backgroundColor": "rgba(var(--theme-provider-scooter), 0.5)",
  "color": "rgb(var(--theme-provider-black))",
  "cursor": "pointer",
  "height": "5px",
  "maxWidth": "100%",
  "overflow": "hidden",
  "textOverflow": "ellipsis",
  "whiteSpace": "nowrap",
  "width": "100%",
}
`;

exports[`customStyles method customStyles option 2`] = `
{
  ":active": {
    "backgroundColor": "rgba(var(--theme-provider-scooter), 0.66)",
  },
  "backgroundColor": "rgba(var(--theme-provider-scooter), 0.33)",
  "color": "rgb(var(--theme-provider-black))",
  "cursor": "pointer",
  "height": "5px",
  "maxWidth": "100%",
  "overflow": "hidden",
  "textOverflow": "ellipsis",
  "whiteSpace": "nowrap",
  "width": "100%",
}
`;
